# voussoir

./: .gitignore  CMakeLists.txt  LICENSE.md  OpenSUSE_Build_Service_Specification.spec  README.md  Todo.txt  bookscan.spec  main.cpp  marker.cpp  marker.h  page.cpp  page.h  voussoir.spec
Example_Images/: example_automated_script_that_watches_a_folder.sh  example_command_invocation_for_test_input_jpg.sh
